--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "^14.2.25",
     "react": "^18",
     "react-dom": "^18",
     "@auth0/nextjs-auth0": "^3.0.0",
@@ -30,6 +30,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "^14.2.25"
   }
 } 
